# ZepraSearch

./: .gitignore  DATABASE_INTEGRATION.md  ENHANCED_SEARCH_BOT_README.md  FRONTEND_BACKEND_TROUBLESHOOTING.md  FRONTEND_UPGRADE.md  README.md  REAL_DATA_IMPLEMENTATION.md  USER_SEARCH_HISTORY.md  build_cpp_windows.bat  crawled_data.json  start-system.bat  start.bat  start.sh  test-system.js
backend/cpp_crawler/: CMakeLists.txt  CMakeLists_enhanced.txt  CMakeLists_windows.txt  Makefile  config.ini
backend/cpp_crawler/backup/: README.txt  main_simple.cpp  search_service.cpp
backend/cpp_crawler/build_enhanced/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  crawler_simple.vcxproj  crawler_simple.vcxproj.filters  ketivee_crawler_simple.sln
backend/cpp_crawler/build_enhanced/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
backend/cpp_crawler/src/: main.cpp  search_engine.h
backend/cpp_crawler/src/analytics/: performance_metrics.h  search_analytics.h
backend/cpp_crawler/src/api/: search_api.h
backend/cpp_crawler/src/crawler/: crawler.h
backend/cpp_crawler/src/features/: image_search.h  voice_search.h
backend/cpp_crawler/src/net/: connection_pool.h  http2_frame.h  http_client.h  http_server.h
backend/cpp_crawler/src/search/: index_manager.h  inverted_index.h  personalization.h  query_analyzer.h  ranker.h  realtime_updater.h
backend/cpp_crawler/src/security/: rate_limiter.h
backend/cpp_crawler/src/storage/: disk_index.h
backend/cpp_crawler/src/system/: health_monitor.h
backend/cpp_crawler/src/text/: parser.h  stemmer.h  stopwords.h
backend/cpp_crawler/src/utils/: config_manager.h  logger.h
(+114 files in other folders)
